--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.4.1
+certifi==2021.5.30
+cloudinary==1.26.0
 Django==1.11.17
 django-bootstrap3==14.3.0
 Pillow==8.3.1
 psycopg2==2.8.6
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.6
+whitenoise==5.2.0
