--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.4.1
 certifi==2021.5.30
 cloudinary==1.26.0
+dj-database-url==0.5.0
 Django==1.11.17
 django-bootstrap3==14.3.0
+django-heroku==0.3.1
 Pillow==8.3.1
 psycopg2==2.8.6
 pytz==2021.1
